Highlight all buildings

--- a/examples/src/main/res/layout/layout_activity_building_highlight.xml
+++ b/examples/src/main/res/layout/layout_activity_building_highlight.xml
@@ -8,9 +8,30 @@
         android:id="@+id/mapView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toTopOf="@id/exampleActions"
+        />
+
+    <androidx.appcompat.widget.LinearLayoutCompat
+        android:id="@+id/exampleActions"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="@dimen/mapbox_dimen_8dp"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <androidx.appcompat.widget.SwitchCompat
+            android:id="@+id/toggleBuildings"
+            android:text="Show buildings"
+            android:layout_width="wrap_content"
+            android:background="@color/cardview_light_background"
+            android:layout_height="wrap_content"
+            />
+
+    </androidx.appcompat.widget.LinearLayoutCompat>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
